<resources>
    <string name="app_name">FrediApp</string>
    <string name="action_settings">Settings</string>
    <string name="lblTitleText">Login</string>
    <string name="lblMailText">Email</string>
    <string name="lblPasswordText">Password</string>
    <string name="btnLoginText">Login</string>
    <string name="txtMailHint">Enter your email address</string>
    <string name="txtPasswordHint">Enter your password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_add_ndf">AddNdfActivity</string>
    <string name="btnRegisterText">Register</string>
    <string name="lblTitleTextRegister">Register</string>
    <string name="nh">Name</string>
    <string name="ph">Firstname</string>
    <string name="rh">Street</string>
    <string name="cph">Post code</string>
    <string name="vh">Town</string>
    <string name="am1h">Email</string>
    <string name="am2h">Email confirmation</string>
    <string name="passh">Password</string>
    <string name="pass2h">Password confirmation</string>
    <string name="su">Register</string>
    <string name="title_activity_gestion_ndf">GestionNdfActivity</string>
    <string name="dateNdf">Date</string>
    <string name="trajetNdf">Trajet</string>
    <string name="kmNdf">Distance (km)</string>
    <string name="coutpNdf">Coût du péage</string>
    <string name="coutHndf">Coût de l\'hebergement</string>
    <string name="coupRNdf">Coût des Repas</string>
    <string name="idMotifNdf">Motif</string>
    <string name="idDemandeurNdf">Demandeur</string>
    <string name="idAnneeNdf">Annee</string>
    <string name="btnAddNdf">Add</string>
    <string name="title_activity_add_ndf_date">AddNdfDateActivity</string>
    <string name="txtBtnLogout">LogOut</string>
    <string name="txtBtnAddNdf">Add Ndf</string>
</resources>
