<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register"
    tools:context="fr.limayrac.ppe.henrybouetard.frediapp.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblTitleTextRegister"
        android:id="@+id/textView"
        android:textSize="36dp"
        android:textColor="#2f4f4f"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:id="@+id/userNom"
        android:hint="@string/nh"
        android:nextFocusDown="@+id/userPrenom"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:id="@+id/userPrenom"
        android:hint="@string/ph"
        android:nextFocusDown="@+id/userRue"
        android:layout_below="@+id/userNom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:id="@+id/userRue"
        android:hint="@string/rh"
        android:nextFocusDown="@+id/userCP"
        android:layout_below="@+id/userPrenom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:id="@+id/userCP"
        android:hint="@string/cph"
        android:nextFocusDown="@+id/userVille"
        android:layout_below="@+id/userRue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:id="@+id/userVille"
        android:hint="@string/vh"
        android:nextFocusDown="@+id/userMail"
        android:layout_below="@+id/userRue"
        android:layout_toRightOf="@+id/userCP"
        android:layout_toEndOf="@+id/userCP" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:id="@+id/userMail"
        android:hint="@string/am1h"
        android:nextFocusDown="@+id/userMail2"
        android:layout_below="@+id/userCP"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:id="@+id/userMail2"
        android:hint="@string/am2h"
        android:nextFocusDown="@+id/userPass"
        android:layout_below="@+id/userMail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:id="@+id/userPass"
        android:hint="@string/passh"
        android:password="true"
        android:nextFocusDown="@+id/userPass2"
        android:layout_below="@+id/userMail2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:id="@+id/userPass2"
        android:hint="@string/pass2h"
        android:password="true"
        android:nextFocusDown="@+id/btnSignUp"
        android:layout_below="@+id/userPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/su"
        android:id="@+id/btnSignUp"
        android:nestedScrollingEnabled="false"
        android:onClick="registerButtonPressed"
        android:layout_below="@+id/userPass2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
