<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login" tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblTitleText"
        android:id="@+id/lblTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36dp"
        android:textColor="#2f4f4f" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMailText"
        android:id="@+id/lblName"
        android:layout_marginTop="70dp"
        android:textSize="18dp"
        android:textColor="#555555"
        android:textStyle="bold"
        android:layout_below="@+id/lblTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtMail"
        android:layout_alignParentStart="true"
        android:hint="@string/txtMailHint"
        android:textCursorDrawable="@null"
        android:backgroundTint="#555555"
        android:layout_below="@+id/lblName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPasswordText"
        android:id="@+id/lblPassword"
        android:layout_marginTop="29dp"
        android:textSize="18dp"
        android:textColor="#555555"
        android:textStyle="bold"
        android:layout_below="@+id/txtMail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:layout_alignParentStart="true"
        android:hint="@string/txtPasswordHint"
        android:textCursorDrawable="@null"
        android:backgroundTint="#555555"
        android:layout_below="@+id/lblPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLoginText"
        android:id="@+id/btnLogin"
        android:layout_marginTop="50dp"
        android:onClick="loginButtonPressed"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegisterText"
        android:id="@+id/btnRegister"
        android:layout_marginTop="20dp"
        android:onClick="registerButtonPressed"
        android:layout_below="@+id/btnLogin"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin" />

</RelativeLayout>
